swagger docs updated and authentication bugs resolved and completed .
